--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "@types/node": "^24.3.1",
     "@types/typescript": "^0.4.29",
     "express": "^5.1.0",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
@@ -11,8 +12,7 @@
     "@types/mysql": "^2.15.27",
     "cors": "^2.8.5",
     "mysql2": "^3.14.5",
-    "nodemon": "^3.1.10",
-    "tsx": "^4.20.5"
+    "nodemon": "^3.1.10"
   },
   "name": "backend",
   "version": "1.0.0",
